# e-tech-assist

./: .env  .gitignore  Cargo.toml  config.yaml  test.http
.VSCodeCounter/2023-05-20_01-02-16/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-05-20_01-02-59/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
web-client/: Cargo.toml
web-client/admin/: .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web-client/admin/public/static/css/: loading.css
web-client/admin/src/: App.vue  main.ts
web-client/admin/src/api/: axios.config.ts  index.ts
web-client/admin/src/api/interceptors/: CustomRequestInterceptor.ts  UserTokenExpiredInterceptor.ts
web-client/admin/src/api/types/: common.ts
web-client/admin/src/components/: AddButton.vue  DeleteButton.vue  FormRender.tsx  IconSelector.vue  MessageContent.vue  ModalDialog.vue  PasswordStrong.vue  RichTextEditor.vue  SearchContent.vue  SortableTable.vue  TableBody.vue  TableConfig.vue  TableFooter.vue  TableHeader.vue  index.ts  types.ts
web-client/admin/src/components/Scrollbar/: index.ts
web-client/admin/src/hooks/: table.ts  useCreateScript.ts  useEcharts.ts  useEmit.ts  useGray.ts  useMenuWidth.ts  usePrimaryColor.ts  useTheme.ts
web-client/admin/src/layout/: Layout.vue  Main.vue  MainLayout.vue  index.ts
web-client/admin/src/layout/actions/: index.vue
web-client/admin/src/layout/avatar/: index.vue
web-client/admin/src/layout/breadcrumb/: index.vue
web-client/admin/src/layout/footer/: index.vue
web-client/admin/src/layout/header/: index.vue
web-client/admin/src/layout/humburger/: index.vue
web-client/admin/src/layout/loading/: index.vue
web-client/admin/src/layout/logo/: index.vue
web-client/admin/src/layout/navbar/: index.vue
web-client/admin/src/layout/setting/: index.vue
web-client/admin/src/layout/sidebar/: InnerSideBar.vue  SideBar.vue  TabSplitSideBar.vue
web-client/admin/src/router/: index.ts
web-client/admin/src/setting/: index.ts
web-client/admin/src/store/: index.ts
web-client/admin/src/styles/: index.css
web-client/admin/src/utils/: echarts.ts  index.ts
web-client/mini-program/: .eslintrc.js  .prettierrc.cjs  .prettierrc.js  index.html  package.json  pnpm-lock.yaml  project.config.json  project.private.config.json  tsconfig.json  vite.config.ts
web-client/mini-program/src/: App.vue  main.ts  pages.json  uni.scss
web-client/mini-program/src/api/: account.ts  index.ts  login.ts  request.ts
web-client/mini-program/src/models/: account.ts  login.ts
web-client/mini-program/src/store/: article.ts  common.ts  quick-msg.ts  store-name.ts  user.ts
web-client/mini-program/src/utils/: index.ts  utils.ts
web-client/src/: lib.rs
web-client/web/: .eslintrc.js  .prettierrc.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
web-client/web/src/: App.vue  main.ts
web-client/web/src/api/: index.ts
web-client/web/src/assets/: base.css  base.min.css  base.scss
web-client/web/src/components/: Captcha.vue  Content.vue  Footer.vue  Header.vue  Layout.vue  ScrollToTopButton.vue
web-client/web/src/router/: index.ts
web-client/web/src/stores/: index.ts
web-client/web/src/styles/: index.ts
web-client/web/src/utils/: index.ts
web-client/webassembly/: Cargo.toml  LICENSE_MIT
web-client/webassembly/src/: lib.rs
web-server/: .env  Cargo.toml
web-server/db/: e-tech-assist.sql
web-server/src/: main.rs
web-server/src/common/: banner.rs  base.rs  errors.rs  jwt.rs  mod.rs  res.rs  state.rs
web-server/src/config/: cfg.rs  context.rs  ctx.rs  init.rs  mod.rs
web-server/src/dbaccess/: article.rs  login.rs  mod.rs  perm.rs  quick_msg.rs  role.rs  sql.rs  sql.sql  user.rs
web-server/src/handlers/: article.rs  login.rs  mod.rs  perm.rs  quick_msg.rs  role.rs  test.rs  upload.rs  user.rs
web-server/src/middleware/: cors.rs  errors.rs  filter.rs  mod.rs
web-server/src/models/: mod.rs  user.rs
web-server/src/models/dto/: article.rs  base.rs  login.rs  mod.rs  perm.rs  quick_msg.rs  role.rs  user.rs
web-server/src/models/entity/: base.rs  base_entity.rs  mod.rs  user.rs  user_detail.rs
web-server/src/models/enums/: article.rs  common.rs  mod.rs
web-server/src/models/vo/: article.rs  login.rs  mod.rs  perm.rs  quick_msg.rs  role.rs  upload.rs  user.rs
web-server/src/routers/: article.rs  assets.rs  common.rs  login.rs  mod.rs  perm.rs  quick_msg.rs  role.rs  test.rs  upload.rs  user.rs
web-server/src/utils/: captcha.rs  db.rs  email.rs  epc.rs  fields.rs  fill.rs  ip.rs  jwt.rs  log.rs  mod.rs  permission.rs  qrcode.rs  redis.rs  time.rs  validate.rs  wxapp.rs
(+130 files in other folders)
