[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.12", features = ["headers"]}
tower ={version="0.4.13" }
tower-http = { version = "0.4.0",features=["cors"] }

# 序列化
serde = {version = "1.0.158", features = ["derive"]}
serde_json = "1.0.94"
# 时间格式化
chrono = { version = "0.4.24", features = ["serde"] }

# 异步运行时
tokio = {version = "1.26.0", features = ["full"]}

# 日志
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

# 数据库
sqlx = { version = "0.6.3", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }

cassie = "0.1.2"

# dotenv
dotenv = "0.15.0"

# rbatis
rbs = { version = "4.3.1"}
rbatis = { version = "4.3.0"}
rbdc-pg={version="4.3.0"}

# 日志
log = "0.4.17"
fast_log = "1.5.54"

# 彩色文字
colored = "2.0.0"

# jwt
jsonwebtoken = "8.3.0"

# 雪花id
snowflake = { version = "1.3.0", features = ["serde_support"] }

# 加密模块
ring = "0.16.20"