[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 基础依赖
axum = { version = "0.6.12", features = ["headers", "http2"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
hyper = "0.14.25"
http-body = "0.4.5"
# http = "0.2.9"
bytes = "1.4.0"

# 异步运行时
tokio = { version = "1.26.0", features = ["full"] }

# request header
headers = "0.3.8"

# 序列化
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_yaml = "0.9.19"
json = "0.12.4"
heck = "0.4.1"                                         # 标识符命名风格转换

# 时间格式化
chrono = { version = "0.4.24", features = ["serde"] }

# 权限校验
cassie = "0.1.2"

# dotenv
dotenv = "0.15.0"

# rbatis
rbs = { version = "4.3.2" }
rbatis = { version = "4.3.0" }
rbdc-pg = { version = "4.3.0" }

# redis
redis = { version = "0.22.3", features = ["r2d2", "tokio-comp"] }

# 日志
log = { version = "*", features = ["std", "serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
    "local-time",
    "registry",
    "fmt",
    "std",
    "time",
] }
time = { version = "0.3.20", features = [
    "local-offset",
    "std",
    "formatting",
    "parsing",
] }
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
color-eyre = "0.6.2"

# 彩色输出
colored = "2.0.0"

# jwt
jsonwebtoken = "8.3.0"

# 加解密/编解码模块
ring = "0.16.20"
hex = "0.4.3"
base64 = "0.13.1"

# 异步
futures = "0.3.27"

# 参数校验
validator = { version = "0.16.0", features = ["derive", "phone"] }
validator_derive = "0.16.0"
regex = "1.7.3"
lazy_static = "1.4.0"

# 验证码
captcha-rs = "0.2.8"

# uuid
uuid = { version = "1.3.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

# ip
axum-client-ip = "0.4.0"
# ip所属地址
maxminddb = "0.23.0"

# 全局容器
once_cell = "1.17.1"

rust-crypto = "0.2.36"
reqwest = { version = "0.11.16", default-features = false, features = [
    "json",
    "rustls-tls",
    "blocking",
] }

# 邮件
lettre = "0.10.3"

# 二维码
fast_qr = "*"
